Fixing Issue of sidebar sticky and topbar z-index

--- a/react_js/src/components/sidebar/sidebar.css
+++ b/react_js/src/components/sidebar/sidebar.css
@@ -2,6 +2,8 @@
     flex: 3;
     height: calc(100vh - 50px);
     overflow-y: scroll;
+    position: sticky;
+    top: 50px;
 }
 ::-webkit-scrollbar{
     width: 5px;
@@ -54,4 +56,5 @@
     border-radius: 50%;
     object-fit: cover;
     margin-right: 10px;
+
 }
